Preparing for release.

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+# Version 0.9,1, 2010-04-15, Paris
+
+- Fix a gc and leak bug in delay_s and delay_e. 
+- Improved and added examples to run UNIX timelines.
+
+
 # Version 0.9.0, 2009-01-19, Lausanne
 
 First release.
